char selection finished

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="character-big character-player-1">
                 <img src="./src/images/thor.png" alt="character selected player 1" id="p1-character">
                 <div class="character-name">
-                    <h2 class="name-player-1 id="name-player-1">Player 1</h2>
+                    <h2 class="name-player-1" id="name-player-1">Player 1</h2>
                 </div>
             </div>
 
