readme.md att + svg icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character Selection</title>
 
+    <link rel="icon" type="image/svg+xml" href="./src/images/marvel-shield-variant-svgrepo-com.svg" />
     <link rel="stylesheet" href="./src/css/variables.css">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/fonts.css">    
@@ -81,7 +82,7 @@
                 <img src="./src/images/ultron.png" alt="character selected player 2" id="p2-character">
 
                 <div class="character-name">
-                    <h2 class="name-player-2">Player 2</h2>
+                    <h2 class="name-player-2">Ultron</h2>
                 </div>
             </div>
         </div>
